force-app/main/default/objects/COI_Campaign__c/COI_Campaign__c.object-meta.xml
<CustomObject>
    <description>Allows users to track campaigns and associate them to a COI.  Out of the box campaign functionality only works for Leads, Contacts, and Person Accounts</description>
    <label>COI Campaign</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>COI Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COI Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>