force-app/main/default/objects/COI_Campaign__c/fields/Campaign_Description__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Description__c</fullName>
    <description>Describes the purpose and content of the campaign</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>