force-app/main/default/objects/COI_Campaign__c/fields/Date_Campaign_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Date_Campaign_Delivered__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Campaign Delivered</label>
    <type>Date</type>
</CustomField>