force-app/main/default/objects/COI_Campaign__c/fields/Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Type__c</fullName>
    <label>Delivery Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct_Mail</fullName>
                <label>Direct Mail</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>In-Person Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>